# android_performance

./: .gitignore  CLAUDE.md  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hook_functions.cpp  mock_native_crash.cpp  mock_native_leak.cpp  native_capture.cpp  optimize.cpp
app/src/main/java/com/example/performance_optimize/: MainActivity.java
app/src/main/java/com/example/performance_optimize/apksize/: ApkSizeOptimizeActivity.java
app/src/main/java/com/example/performance_optimize/memory/: JavaLeakActivity.java  MemoryExampleActivity.java  NativeLeakActivity.java
app/src/main/java/com/example/performance_optimize/stability/: StabilityExampleActivity.java
app/src/main/res/layout/: activity_java_leak.xml  activity_main.xml  activity_memory_example.xml  activity_native_leak.xml  activity_stability_example.xml
app/src/main/res/values/: strings.xml  themes.xml
buildSrc/: build.gradle
buildSrc/src/main/groovy/com.example.test/: MyAsmPlugin.groovy  MyAsmTransform.groovy  TestClassVisitor.groovy
gradle/wrapper/: gradle-wrapper.properties
